final_project/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polybot-yolo5
  namespace: ahmad-baloum
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polybot-yolo5
  template:
    metadata:
      labels:
        app: polybot-yolo5
    spec:
      containers:
      - name: polybot
        image: ahmadbaloum/eks-polybot:0.0.1
        volumeMounts:
        - name: aws-credentials
          mountPath: /root/.aws
          readOnly: true
        ports:
        - containerPort: 8443
      - name: yolo5
        image: ahmadbaloum/eks-yolo5:0.0.1
        volumeMounts:
        - name: aws-credentials
          mountPath: /root/.aws
          readOnly: true
        ports:
        - containerPort: 5000
      volumes:
      - name: aws-credentials
        secret:
          secretName: aws-secret
