final_project/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: polybot-service
  namespace: ahmad-baloum
spec:
  selector:
    app: polybot
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
